[gd_scene load_steps=16 format=3 uid="uid://dmmyv728c85ag"]

[ext_resource type="Theme" uid="uid://biwko33b8flpa" path="res://shared/theme/survivor_game.tres" id="1_11xvg"]
[ext_resource type="Script" uid="uid://cdfr0f7stuieh" path="res://menu/character_select/character_select.gd" id="1_tbvmj"]
[ext_resource type="Script" uid="uid://b2sycb0fk37xf" path="res://characters/player/script/character_info.gd" id="3_dlf04"]
[ext_resource type="PackedScene" uid="uid://ci1sb54cm4xqh" path="res://characters/player/scene/yellow.tscn" id="4_m2m65"]
[ext_resource type="Texture2D" uid="uid://bwaqb6msenbbp" path="res://menu/sprite/button_grey_depth_line.png" id="5_dlf04"]
[ext_resource type="Texture2D" uid="uid://dsw7y0enp8lf7" path="res://characters/player/sprites/yellow/alienYellow.png" id="5_ev784"]
[ext_resource type="PackedScene" uid="uid://hnyipcnxxx0n" path="res://menu/background.tscn" id="6_5tvcj"]
[ext_resource type="PackedScene" uid="uid://b1j5fo84ar6nd" path="res://weapons/ranged_weapons/flamethrower/scene/flamethrower.tscn" id="6_8un4v"]
[ext_resource type="PackedScene" uid="uid://c1emgqt0boroh" path="res://weapons/melee_weapons/sword/scene/sword.tscn" id="7_q67eq"]
[ext_resource type="PackedScene" uid="uid://dmml3kt2amqjr" path="res://weapons/melee_weapons/forcefield/scene/forcefield.tscn" id="8_13edt"]
[ext_resource type="PackedScene" uid="uid://cxcoswce3vqjx" path="res://characters/player/scene/blue.tscn" id="9_khseo"]
[ext_resource type="Texture2D" uid="uid://61qqpjkva8wa" path="res://characters/player/sprites/blue/alienBlue.png" id="10_npu0k"]

[sub_resource type="Resource" id="Resource_1hiba"]
resource_local_to_scene = true
script = ExtResource("3_dlf04")
character_name = "Yellow"
description = "A very basic alien with a very basic gun"
logo = ExtResource("5_ev784")
appearance = ExtResource("4_m2m65")
health = 100.0
max_health = 100.0
speed = 600.0
armor = 0.0
weapons = Array[Resource]([ExtResource("6_8un4v"), ExtResource("7_q67eq"), ExtResource("8_13edt")])
xp = 0.0
level = 1
xp_by_level_multipler = 2.0
upgrade_by_level = 3
metadata/_custom_type_script = "uid://b2sycb0fk37xf"

[sub_resource type="Resource" id="Resource_et8hq"]
resource_local_to_scene = true
script = ExtResource("3_dlf04")
character_name = "Blue"
description = "Alien specialized in mele wepon"
logo = ExtResource("10_npu0k")
appearance = ExtResource("9_khseo")
health = 150.0
max_health = 150.0
speed = 500.0
armor = 0.0
weapons = Array[Resource]([ExtResource("7_q67eq")])
xp = 0.0
level = 1
xp_by_level_multipler = 10.0
upgrade_by_level = 3
metadata/_custom_type_script = "uid://b2sycb0fk37xf"

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_5tvcj"]
texture = ExtResource("5_dlf04")
texture_margin_left = 16.0
texture_margin_top = 16.0
texture_margin_right = 16.0
texture_margin_bottom = 32.0

[node name="CharacterSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_11xvg")
script = ExtResource("1_tbvmj")
characters_infos = Array[ExtResource("3_dlf04")]([SubResource("Resource_1hiba"), SubResource("Resource_et8hq")])

[node name="Background" parent="." instance=ExtResource("6_5tvcj")]
layout_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 70
theme_override_constants/margin_top = 70
theme_override_constants/margin_right = 70
theme_override_constants/margin_bottom = 70

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="CharacterList" type="HFlowContainer" parent="MarginContainer/HBoxContainer/VBoxContainer/MarginContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
last_wrap_alignment = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="BackButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_5tvcj")
text = "BACK"

[node name="DetailsPanel" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="CharacterName" type="Label" parent="MarginContainer/HBoxContainer/DetailsPanel"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/HBoxContainer/DetailsPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="CharacterDescription" type="Label" parent="MarginContainer/HBoxContainer/DetailsPanel/ScrollContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
autowrap_mode = 2

[node name="Control" type="Control" parent="MarginContainer/HBoxContainer/DetailsPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/DetailsPanel"]
layout_mode = 2

[node name="ContinueButton" type="Button" parent="MarginContainer/HBoxContainer/DetailsPanel/MarginContainer"]
layout_mode = 2
text = "Continue"

[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/MarginContainer/BackButton" to="." method="_on_back_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/DetailsPanel/MarginContainer/ContinueButton" to="." method="_on_continue_pressed"]
